--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@ p {
 h1 {
   font-size: 2.5rem;
   font-weight: 700;
-  line-height: 3rem;
   text-align: center;
   color: rgba(25, 25, 25, 0.9);
 }
@@ -151,7 +150,7 @@ input[type='number'] {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
+  gap: 0;
 }
 
 .bg {
